made one update

--- a/index.html
+++ b/index.html
@@ -103,13 +103,7 @@
         <div class="third-part-desc">
           <h3>Goals We Can Help You Achieve</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
-            animi itaque necessitatibus ut? Voluptates suscipit numquam, ipsum
-            quibusdam praesentium commodi modi magnam exercitationem, deleniti
-            ut neque error repellendus. Facere vitae expedita dolores ad tempore
-            ea harum nihil fuga ullam adipisci mollitia, rem reprehenderit amet,
-            excepturi quisquam magnam sunt enim voluptatem rerum natus
-            consequuntur. Facilis, tempore. Necessitatibus nisi adipisci
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore harum tempore, repellendus quae, obcaecati omnis quidem hic amet saepe consequuntur at aliquid! Iste eius architecto, magnam illum veritatis minus odit.
           </p>
         </div>
       </div>
@@ -117,10 +111,7 @@
         <div class="fourth-part-desc">
           <h3>It All Starts With Strategy</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
-            distinctio odit, harum voluptas esse officiis error sint tenetur aut
-            animi asperiores soluta blanditiis dolore rem dolor enim iusto
-            expedita sed.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus quam explicabo quibusdam reiciendis repellendus, deserunt, aperiam sed tenetur sint nesciunt dolore quos ab asperiores adipisci. Placeat perspiciatis quasi dolorum reprehenderit?
           </p>
         </div>
         <div class="fourth-part-img">
